--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,7 +9,7 @@
 /* Main */
 body {
 	overflow-x: hidden;
-    margin-top: -9px;
+    /*margin-top: -5px;*/
 }
 a:hover {
 	text-decoration: none;
@@ -21,6 +21,11 @@ a:hover {
     height: 57px;
     /*width: 100%;*/
     /*z-index: -9;*/
+	width: 100%;
+    position: absolute;
+	position: absolute;
+	background-color: #444444;
+	z-index: 9999;
 }
 
 #header h1 {
@@ -28,7 +33,7 @@ a:hover {
     color: #F1F1F1;
     text-shadow: 0px 1px 1px #4d4d4d;
     position: relative;
-    top: 10px;
+    top: 5px;
     left: 10px;
     font-size: 30px;
     float: left;
@@ -129,11 +134,8 @@ float: left;
 }
 /* Top user navigation */
 #user-nav {
-    position: absolute;
-    right: 30px;
-    top: 5px;
-    z-index: 20;
-    margin: 0;
+	float: right;
+	margin: 10px;
 }
 #user-nav > ul {
     margin: 0;
@@ -193,7 +195,7 @@ float: left;
     position: relative;
     width: 220px;
     z-index: 16;
-    margin-top: 30px;
+    margin-top: 90px;
 }
 
 #sidebar > ul {
@@ -265,7 +267,7 @@ float: left;
     background: none repeat scroll 0 0 #fff;
     margin-left: 220px;
     margin-right: 0;
-    padding-bottom: 25px;
+    /*padding-bottom: 25px;*/
     position: relative;
     min-height: 500px;
     width: auto;
@@ -322,6 +324,10 @@ float: left;
 #content-header .btn-group .btn .label {
 	position: absolute;
 	top: -7px;
+}
+
+.container-fluid {
+	margin-top: 20px;
 }
 
 .container-fluid .row-fluid:first-child {
@@ -1471,9 +1477,52 @@ form {
 ==================
 */
 
-/*.icon-arrow-down,.icon-arrow-right,.icon-arrow-up,.icon-comment,.icon-config,
-.icon-logout,.icon-search,.icon-trash{
-  background: url(../img/images1.png) no-repeat top left;
+html, body, .container, .content {
+    height: 100%;
+}
+
+.container, .content {
+    position: relative;
+}
+
+.proper-content {
+	padding-top: 57px; /* >= navbar height */
+	border-radius: 5px;
+}
+
+.wrapper {
+	background: #fff;
+	/*border-radius: 5px;*/
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -30px; /* same as the footer */
+}
+
+.push {
+    height: 30px; /* same as the footer */
+}
+.footer-wrapper {
+    position: relative;
+    height: 30px;
+    padding: 0 50px;
+}
+
+
+.sidebar-fixed {
+	position: fixed!important;
+}
+
+#sub-header-content {
+	background-color: #444444;
+}
+
+/*.top {
+    top: 0px;
+    background-color: #ccc;
+    position: absolute;
+    top: 60px;
+    z-index: 99999;
 }*/
 
 .icon-comment-custom,.icon-config-custom,
