--- a/static/css/board.css
+++ b/static/css/board.css
@@ -1,76 +1,16 @@
 /*
-===============
- BOARD CONTENT
-===============
-*/
-
-.definition_ready_container {
-    display: table;
-}
-.definition_ready_container .status {
-    display: table-cell;
-    width:20%;
-}
-/*omit width:50% for auto-scaled column widths*/
-
-
-.container-fluid, .container-fluid .row-fluid:first-child {
-    margin-top: 0px;
-}
-
-.story_container {
-    border-bottom: 1px solid #000;
-    padding: 10px 0;
-}
-
-.definition_ready_container {
-}
-
-.definition_ready_container .span2, .definition_ready_container .span3 {
-    /*border-right: 1px solid #000;*/
-    /*margin-right: 1px;*/
-}
-
-/*
-=======
- ICONS
-=======
-*/
-
-
-
-/*
-========
- SCROLL
-========
+============
+ NAV SCROLL
+============
 */
 
 .nav-status {
-    /*text-align: left;*/
+    display: table;
+    width: 100%;
     text-align: center;
-    background-color: rgb(241, 241, 241);
+    background-color: rgb(184, 238, 195);
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
-}
-
-.nav-story {
-    
-}
-
-.nav-todo {
-    
-}
-
-.nav-inprogress {
-    
-}
-
-.nav-verification {
-    
-}
-
-.nav-done {
-
 }
 
 .fixed-nav{
@@ -79,6 +19,67 @@
     top: 0;
     width: 100%;
 } /* this make our menu fixed top */
+
+/*
+===============
+ BOARD CONTENT
+===============
+*/
+
+.story_container, .definition_ready_container {
+    display: table;
+}
+.column {
+    display: table-cell;
+    width:20%;
+}
+
+/*omit width:50% for auto-scaled column widths*/
+
+
+.story_container {
+    margin: 20px 0;
+    /*border: 1px inset #000;*/
+    /*background-color: #ccc;*/
+    box-shadow: 0px 0px 10px #000;
+}
+
+.story_title {
+    text-align: center;
+    background-color: #fff5e3;
+}
+
+.story_title h5 {
+    font-size: 20px;
+}
+
+.container-fluid, .container-fluid .row-fluid:first-child {
+    margin-top: 0px;
+}
+
+.definition_ready_title {
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.definition_ready_container {
+    width: 100%;
+    background-color: rgb(235, 241, 243);
+    padding: 20px 0;
+    border: 1px solid #ccc;
+}
+
+.definition_ready_container .column {
+    border-right: 1px solid #ccc;
+    padding: 0 10px;
+}
+
+/*
+=======
+ ICONS
+=======
+*/
+
 
 
 
