--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,12 +1,15 @@
 {{extend 'default/layout_base.html'}}
 
 <div id="sub-header-content">
-	<div id="breadcrumb">
-	    <a href='{{=URL("index")}}' class="current" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Home</a>
-	</div>
-	<div id="content-header">
-	    <h1>{{=T('Dashboard')}}</h1>
-	</div>
+    <div id="content-header">
+        <div id="breadcrumb">
+            <a href="#" class="current" title="{{=T('Home')}}" ><i class="icon-home"></i> {{=T('Home')}}</a>
+        </div>
+        <div id="header-name" class="pull-left">
+            <h1>{{=T('Dashboard')}}</h1>
+        </div>
+        <div class="clearfix"></div>
+    </div>
 </div>
 
 <div class="container-fluid">
