--- a/views/default/projects.html
+++ b/views/default/projects.html
@@ -1,12 +1,15 @@
 {{extend 'default/layout_base.html'}}
 
 <div id="sub-header-content">
-    <div id="breadcrumb">
-        <a href='{{=URL("index")}}' title="Go to Home" class="tip-bottom"><i class="icon-home"></i> {{=T('Home')}}</a>
-        <a href="#" class="current">{{=T('Projects')}}</a>
-    </div>
     <div id="content-header">
-        <h1>{{=T('Create a Project')}}</h1>
+        <div id="breadcrumb">
+            <a href='{{=URL("index")}}' title="{{=T('Go to')}} {{=T('Home')}}" class="tip-bottom"><i class="icon-home"></i> Home</a>
+            <a href="#" class="current" title="{{=T('Projects')}}" >{{=T('Projects')}}</a>
+        </div>
+        <div id="header-name" class="pull-left">
+            <h1>{{=T('Create a Project')}}</h1>
+        </div>
+        <div class="clearfix"></div>
     </div>
 </div>
 
