--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -53,7 +53,7 @@
         <!-- google font -->
         <link href='http://fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
     </head>
-    <body class='{{=g_pagina_atual("default/board/%s" %request.args(0),"close_sidebar")}}'>
+    <body class='{{=g_current_page("default/board/%s" %request.args(0),"close_sidebar")}}'>
         
         <div id="header">
             <h1><a href="{{=URL('index')}}" alt='Scrumforme Logo' title='Scrumforme Logo'><span class="color-logo">Scrumfor</span>.me</a></a></h1>
@@ -64,7 +64,7 @@
                         {{p_count = 1}}
                         {{for i in all_projects:}}
                             {{if p_count <= 8:}}
-                                <li class='{{=g_pagina_atual("default/%s/%s" %(request.function,i.id),"active")}}'><a href='{{=URL(c="default",f="product_backlog",args=[i.id])}}' class="tip-bottom" alt='{{=i.name}}' title='{{=i.name}}'>{{=i.id}}</a></li>
+                                <li class='{{=g_current_page("default/%s/%s" %(request.function,i.id),"active")}}'><a href='{{=URL(c="default",f="product_backlog",args=[i.id])}}' class="tip-bottom" alt='{{=i.name}}' title='{{=i.name}}'>{{=i.id}}</a></li>
                             {{p_count += 1}}
                             {{pass}}
                         {{pass}}
@@ -90,11 +90,11 @@
         <div id="sidebar" class="close_sidebar">
             <a href="#" class="visible-phone"><i class="icon-th-list"></i> {{=T('Menu')}}</a>
             <ul class="sidebar-fixed">
-                <!-- <li class='{{=g_pagina_atual("default/index","active")}}'><a href='{{=URL("index")}}'><i class="icon-home"></i> <span>Dashboard</span></a></li> -->
-                <li class='{{=g_pagina_atual("default/projects","active")}}'><a href='{{=URL("projects")}}' class="tip-right" alt="{{=T('My Projects')}}" title="{{=T('My Projects')}}"><i class="icon-dashboard"></i> <span>{{=T('My Projects')}}</span></a></li>
+                <!-- <li class='{{=g_current_page("default/index","active")}}'><a href='{{=URL("index")}}'><i class="icon-home"></i> <span>Dashboard</span></a></li> -->
+                <li class='{{=g_current_page("default/projects","active")}}'><a href='{{=URL("projects")}}' class="tip-right" alt="{{=T('My Projects')}}" title="{{=T('My Projects')}}"><i class="icon-dashboard"></i> <span>{{=T('My Projects')}}</span></a></li>
                 {{if request.function == "product_backlog" or request.function == "board":}}
-                    <li class='{{=g_pagina_atual("default/board/%s" %request.args(0),"active")}}'><a href='{{=URL(f="board",args=[request.args(0)])}}' class="tip-right" alt="{{=T('Board')}}" title="{{=T('Board')}}"><i class="icon-list-alt"></i> <span>{{=T('Board')}}</span></a></li>
-                    <li class='{{=g_pagina_atual("default/product_backlog/%s" %request.args(0),"active")}}'><a href='{{=URL(f="product_backlog",args=[request.args(0)])}}' class="tip-right" alt="{{=T('Backlog')}}" title="{{=T('Backlog')}}"><i class="icon-tasks"></i> <span>{{=T('Backlog')}}</span></a></li>
+                    <li class='{{=g_current_page("default/board/%s" %request.args(0),"active")}}'><a href='{{=URL(f="board",args=[request.args(0)])}}' class="tip-right" alt="{{=T('Board')}}" title="{{=T('Board')}}"><i class="icon-list-alt"></i> <span>{{=T('Board')}}</span></a></li>
+                    <li class='{{=g_current_page("default/product_backlog/%s" %request.args(0),"active")}}'><a href='{{=URL(f="product_backlog",args=[request.args(0)])}}' class="tip-right" alt="{{=T('Backlog')}}" title="{{=T('Backlog')}}"><i class="icon-tasks"></i> <span>{{=T('Backlog')}}</span></a></li>
                     <li><a href="#" class="tip-right" alt="{{=T('Sprints')}}" title="{{=T('Sprints')}}"><i class="icon-credit-card"></i> <span>{{=T('Sprints')}}</span></a></li>
                     <li><a href="#" class="tip-right" alt="{{=T('Archives')}}" title="{{=T('Archives')}}"><i class="icon-file"></i> <span>{{=T('Archives')}}</span></a></li>
                     <li><a href="#" class="tip-right" alt="{{=T('Team')}}" title="{{=T('Team')}}"><i class="icon-group"></i> <span>{{=T('Team')}}</span></a></li>
@@ -102,7 +102,7 @@
                     <li><a href="#" class="tip-right" alt="{{=T('Metrics')}}" title="{{=T('Metrics')}}"><i class="icon-graph "></i> <span>{{=T('Statistics')}}</span></a></li>
                     <li><a href="#" class="tip-right" alt="{{=T('Contacts')}}" title="{{=T('Contacts')}}"><i class="icon-address-book"></i> <span>{{=T('Contacts')}}</span></a></li>
                 {{pass}}
-                <li><button id="toogle_sidebar" class="tip-right" alt="{{=T('Expand / Collapse Menu')}}" title="{{=T('Expand / Collapse Menu')}}"><i class="icon-chevron-left icon-white"></i> <span>{{=T('Collapse Menu')}}</span></button></li>
+                <li><button id="toogle_sidebar" class="tip-right" alt="{{=T('Expand / Collapse Menu')}}" title="{{=T('Expand / Collapse Menu')}}"><i class='{{=g_if_in_current_page("default/board/%s" %request.args(0),"icon-chevron-right", "icon-chevron-left")}} icon-white'></i> <span>{{=T('Collapse Menu')}}</span></button></li>
             </ul>
 
         </div>
