--- a/static/css/product_backlog.css
+++ b/static/css/product_backlog.css
@@ -6,6 +6,15 @@ span {
     color: rgb(134, 134, 134);
 }
 
+#backlog, #sprint {
+    width: 48%;
+    margin-left: 0px;
+}
+
+#sprint {
+    margin-left: 3%;
+}
+
 #target_ajax {
     display: none;
 }
@@ -21,10 +30,10 @@ margin-top: 0px;
 ========
 */
 
-#backlog-project {
+.project-items {
     /*height: 390px;*/
     /*height: 80%;*/
-    padding-right: 20px;
+    padding-right: 10px;
     overflow-y: scroll;
 }
 
@@ -35,9 +44,26 @@ margin-top: 0px;
 =======
 */
 
-#create_story {
-    position: relative;
-    bottom: 20px;
+#sprint-header {
+    padding-top: 10px;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #ccc;
+}
+
+#sprint-header h4:first-letter {
+    text-transform: capitalize;
+}
+
+#sprint-header h4 {
+    color: #ccc;
+    font-style:italic;
+    font-size: 20px;
+}
+
+#sprint-header h5 span {
+    padding: 6px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
 }
 
 .text_container {
