--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1602,6 +1602,17 @@ html, body, .container, .content {
     margin-left: 43px;
 }
 
+.btn-minimize,.btn-minimize:hover,.btn-minimize:focus,.btn-minimize:active,.btn-minimize.active,.btn-minimize.disabled,.btn-minimize[disabled] {
+    background: transparent;
+    border: none;
+    box-shadow: none;
+}
+
+
+
+
+
+
 /* Responsive design */
 @media (max-width: 480px) {
 	#header h1 {
