--- a/static/css/board.css
+++ b/static/css/board.css
@@ -26,6 +26,20 @@
 ===============
 */
 
+#live_search {
+    margin-right: 10%;
+}
+
+#live_search input {
+    margin: 0px;
+}
+
+#nothingfound {
+    position: absolute;
+    display: none;
+    color: red;
+}
+
 .story_container, .definition_ready_container {
     display: table;
 }
@@ -39,18 +53,24 @@
 
 .story_container {
     margin: 20px 0;
-    /*border: 1px inset #000;*/
-    /*background-color: #ccc;*/
     box-shadow: 0px 0px 10px #000;
 }
 
 .story_title {
     text-align: center;
     background-color: rgb(255, 249, 176);
+    padding: 10px 0;
 }
 
 .story_title h5 {
     font-size: 20px;
+    display: inline;
+}
+
+.story_title .btn-minimize {
+    position: relative;
+    right: 20px;
+    float: right;
 }
 
 .container-fluid, .container-fluid .row-fluid:first-child {
