--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -68,93 +68,91 @@
             </div>
             <div class="project-items">
                 <!-- STORY CONTENT -->
-                <div class="story_block">
-                    {{if "stories" in globals():}}
-                        {{for story in stories:}}
-                            {{if not story.sprint_id == sprint.id: }}
-                            <ul class="story_container item_container">
-                                <li class="story">
-                                    <div class="story_header">
-                                        <div class="text_container">
-                                            <a href="#" class="editable-click story_card editable" data-type="textarea" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="story" data-update="true">{{=story.title}}</a>
-                                        </div>
-                                        <div class="buttons_container">
-                                            <button class="btn expand_story pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'>
-                                                <i class="icon-circle-arrow-down"></i></button>
-                                            <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
-                                            <select class="pull-right benefit" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}'>
-                                            {{selects="P M G GG".split()}}
-                                            {{if story.benefit:}}
-                                                {{for size in selects:}}
-                                                    {{if size == story.benefit:}}
-                                                        <option value="{{=size}}" selected>{{=size}}</option>
-                                                    {{else:}}
-                                                        <option value="{{=size}}">{{=size}}</option>
-                                                    {{pass}}
-                                                {{pass}}
-                                            {{else:}}
-                                                {{selects.insert(0,"?")}}
-                                                {{for size in selects:}}
-                                                    {{if size == "?":}}
-                                                        <option value="" disabled selected>?</option>
-                                                    {{else:}}
-                                                        <option value="{{=size}}">{{=size}}</option>
-                                                    {{pass}}
-                                                {{pass}}                    
-                                            {{pass}}
-                                            </select>
-                                            <input class="pull-right story_points only_numbers" type="number" placeholder="?" min="1" value='{{=g_blank_check(story.story_points)}}' alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'>
-                                            <button class="btn create_definition_ready pull-right" alt='{{=T("Create Definition of Ready")}}' title='{{=T("Create Definition of Ready")}}'>+ {{=T('DR')}}</button>
-                                            <span class="label qtd_definition_ready pull-right tip-bottom" alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
-                                        </div>
-                                        <div class="clearfix"></div>
+                {{if "stories" in globals():}}
+                    {{for story in stories:}}
+                        {{if not story.sprint_id == sprint.id: }}
+                        <ul class="story_container item_container">
+                            <li class="story">
+                                <div class="story_header">
+                                    <div class="text_container">
+                                        <a href="#" class="editable-click story_card editable" data-type="textarea" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="story" data-update="true">{{=story.title}}</a>
                                     </div>
-                                    {{count = 0}}
-                                    {{for df in definition_ready[story.id]:}}
-                                        {{if definition_ready[story.id][count].story_id == story.id:}}
-                                        <ul class="item_container">
-                                            <li class="definition_ready_container">
-                                                <div class="definition_ready">
-                                                    <div class="text_container">
-                                                        <span class="label tip-right" alt='{{=T("Definition of Ready")}}' title='{{=T("Definition of Ready")}}'>{{=T('DR')}}</span>
-                                                        <a href="#" class="editable-click editable definition_ready_card" data-type="textarea" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
-                                                    </div>
-                                                    <div class="buttons_container">
-                                                        <button class="btn expand_definition_ready pull-right" alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'><i class="icon-circle-arrow-down"></i></button>
-                                                        <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
-                                                        <button class="btn create_task pull-right" alt='{{=T("Create Tast")}}' title='{{=T("Create Task")}}'>+ {{=T("Task")}}</button>
-                                                    </div>
-                                                    <div class="clearfix"></div>
-                                                </div><!-- definition_ready -->
-                                                {{for task in tasks[definition_ready[story.id][count].id]:}}
-                                                    <ul class="item_container zebra_row">
-                                                        <li class="task">
-                                                            <div class="text_container">
-                                                                <a href="#" class="editable-click editable" data-type="textarea" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
-                                                            </div>
-                                                            <div class="buttons_container">
-                                                                <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-trash"></i></button>
-                                                                <button class="btn comment_definition_ready pull-right" alt="Comment" title="Comment"><i class="icon-comment-custom"><span>0</span></i></button>
-                                                            </div>
-                                                            <div class="clearfix"></div>
-                                                        </li><!-- task -->
-                                                    </ul>
+                                    <div class="buttons_container">
+                                        <button class="btn btn-minimize expand_story pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'>
+                                            <i class="icon-circle-arrow-down"></i></button>
+                                        <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
+                                        <select class="pull-right benefit" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}'>
+                                        {{selects="P M G GG".split()}}
+                                        {{if story.benefit:}}
+                                            {{for size in selects:}}
+                                                {{if size == story.benefit:}}
+                                                    <option value="{{=size}}" selected>{{=size}}</option>
+                                                {{else:}}
+                                                    <option value="{{=size}}">{{=size}}</option>
                                                 {{pass}}
-                                                </li>
-                                            </ul>
-                                            {{count += 1}}
+                                            {{pass}}
+                                        {{else:}}
+                                            {{selects.insert(0,"?")}}
+                                            {{for size in selects:}}
+                                                {{if size == "?":}}
+                                                    <option value="" disabled selected>?</option>
+                                                {{else:}}
+                                                    <option value="{{=size}}">{{=size}}</option>
+                                                {{pass}}
+                                            {{pass}}                    
                                         {{pass}}
-                                    {{pass}}
-                                </li><!-- story -->
-                                <div class="buttons_footer">
-                                    <button class="btn btn-primary pull-right send_story_sprint">{{=T("Send to Sprint")}} <i class="icon-circle-arrow-right icon-white"></i></button>
+                                        </select>
+                                        <input class="pull-right story_points only_numbers" type="number" placeholder="?" min="1" value='{{=g_blank_check(story.story_points)}}' alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'>
+                                        <button class="btn create_definition_ready pull-right" alt='{{=T("Create Definition of Ready")}}' title='{{=T("Create Definition of Ready")}}'>+ {{=T('DR')}}</button>
+                                        <span class="label qtd_definition_ready pull-right tip-bottom" alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
+                                    </div>
                                     <div class="clearfix"></div>
                                 </div>
-                            </ul>
-                            {{pass}}
+                                {{count = 0}}
+                                {{for df in definition_ready[story.id]:}}
+                                    {{if definition_ready[story.id][count].story_id == story.id:}}
+                                    <ul class="item_container">
+                                        <li class="definition_ready_container">
+                                            <div class="definition_ready">
+                                                <div class="text_container">
+                                                    <span class="label tip-right" alt='{{=T("Definition of Ready")}}' title='{{=T("Definition of Ready")}}'>{{=T('DR')}}</span>
+                                                    <a href="#" class="editable-click editable definition_ready_card" data-type="textarea" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
+                                                </div>
+                                                <div class="buttons_container">
+                                                    <button class="btn btn-minimize expand_definition_ready pull-right" alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'><i class="icon-circle-arrow-down"></i></button>
+                                                    <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
+                                                    <button class="btn create_task pull-right" alt='{{=T("Create Tast")}}' title='{{=T("Create Task")}}'>+ {{=T("Task")}}</button>
+                                                </div>
+                                                <div class="clearfix"></div>
+                                            </div><!-- definition_ready -->
+                                            {{for task in tasks[definition_ready[story.id][count].id]:}}
+                                                <ul class="item_container zebra_row">
+                                                    <li class="task">
+                                                        <div class="text_container">
+                                                            <a href="#" class="editable-click editable" data-type="textarea" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
+                                                        </div>
+                                                        <div class="buttons_container">
+                                                            <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-trash"></i></button>
+                                                            <button class="btn btn-minimize comment_definition_ready pull-right" alt="Comment" title="Comment"><i class="icon-comment-custom"><span>0</span></i></button>
+                                                        </div>
+                                                        <div class="clearfix"></div>
+                                                    </li><!-- task -->
+                                                </ul>
+                                            {{pass}}
+                                            </li>
+                                        </ul>
+                                        {{count += 1}}
+                                    {{pass}}
+                                {{pass}}
+                            </li><!-- story -->
+                            <div class="buttons_footer">
+                                <button class="btn btn-primary pull-right send_story_sprint">{{=T("Send to Sprint")}} <i class="icon-circle-arrow-right icon-white"></i></button>
+                                <div class="clearfix"></div>
+                            </div>
+                        </ul>
                         {{pass}}
                     {{pass}}
-                </div><!-- content -->
+                {{pass}}
             </div><!-- project-items -->
         </div><!-- container-fluid -->
     </div><!-- span6 -->
@@ -190,7 +188,7 @@
                                     <a href="#" class="editable-click story_card editable" data-type="textarea" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="story" data-update="true">{{=story.title}}</a>
                                 </div>
                                 <div class="buttons_container">
-                                    <button class="btn expand_story pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'>
+                                    <button class="btn btn-minimize expand_story pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'>
                                         <i class="icon-circle-arrow-down"></i></button>
                                     <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
                                     <select class="pull-right benefit" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}'>
@@ -231,7 +229,7 @@
                                                 <a href="#" class="editable-click editable definition_ready_card" data-type="textarea" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
                                             </div>
                                             <div class="buttons_container">
-                                                <button class="btn expand_definition_ready pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'><i class="icon-circle-arrow-down"></i></button>
+                                                <button class="btn btn-minimize expand_definition_ready pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'><i class="icon-circle-arrow-down"></i></button>
                                                 <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
                                                 <button class="btn create_task pull-right" alt='{{=T("Create Task")}}' title='{{=T("Create Task")}}'>+ {{=T("Task")}}</button>
                                             </div>
@@ -245,7 +243,7 @@
                                                     </div>
                                                     <div class="buttons_container">
                                                         <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
-                                                        <button class="btn comment_definition_ready pull-right" alt='{{=T("Comment")}}' title='{{=T("Comment")}}'><i class="icon-comment-custom"><span>0</span></i></button>
+                                                        <button class="btn btn-minimize comment_definition_ready pull-right" alt='{{=T("Comment")}}' title='{{=T("Comment")}}'><i class="icon-comment-custom"><span>0</span></i></button>
                                                     </div>
                                                     <div class="clearfix"></div>
                                                 </li><!-- task -->
